<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/zoom1"
            android:title="@string/menu_search"
            android:visibility="visible" />
        <item
            android:id="@+id/nav_filter"
            android:icon="@drawable/f4522db709d"
            android:title="@string/menu_filter"
            android:visibility="visible" />
    </group>

    <item android:title="Керування">
        <menu>
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/logout_img"
                android:title="@string/menu_sign_out" />
        </menu>
    </item>

</menu>
