<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_element"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_centerHorizontal="true"
        android:layout_weight="2"
        android:background="@color/colorLinerLayout"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/name_in_app"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/promoText"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/layout1"
        android:layout_weight="6"
        android:background="@drawable/border_on_bottom"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/yoga2"
            android:gravity="top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/alice"
                android:paddingLeft="5dp"
                android:paddingRight="2dp"
                android:text="@string/mentorTop"
                android:textAlignment="center"
                android:textColor="#972525"
                android:textSize="25sp"
                android:textStyle="bold"
                android:typeface="serif" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/alice"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/mentorText"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#972525"
                android:textSize="24sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="66dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/arrow_down" />

            <Button
                android:id="@+id/btnRegistrationMentor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/register_button"
                android:text="Зареєструватись" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorLeftBackground"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/alice"
                android:padding="5dp"
                android:text="@string/userTop"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="#666060"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="137dp"
                app:srcCompat="@drawable/sm_full" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/alice"
                android:padding="1dp"
                android:text="@string/userText"
                android:textAlignment="center"
                android:textColor="#666060"
                android:textSize="18sp"
                android:textStyle="bold"
                android:typeface="normal" />

            <Button
                android:id="@+id/btnRegisrtrationUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/registration_but2"
                android:text="@string/RegButtonUser" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/layout2"
        android:gravity="center"
        android:layout_weight="2"
        android:padding="10dp"
        android:background="@color/colorBottomBackground"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alice"
            android:text="@string/BottomText"
            android:textAlignment="center"
            android:textColor="#666060"
            android:textSize="20sp"
            android:textStyle="normal|bold" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/login_button"
            android:text="@string/bottomButton"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>