<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="8dp"
                android:text="@string/title_add_group"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/photo_add_group"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <ImageButton
                android:id="@+id/imageGroup"
                android:layout_width="170dp"
                android:layout_height="165dp"
                android:layout_gravity="left"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@android:drawable/ic_menu_camera" />

            <EditText
                android:id="@+id/edtNameGr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minEms="8"
                android:inputType="textPersonName"
                android:text=""
                android:hint="Назва гуртка"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"/>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:text="@string/category_add_group"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:entries="@array/category_array" />
            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/description_add_group"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minEms="30"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/mName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Керівник: "
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_add_group"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"/>

            <EditText
                android:id="@+id/edtNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="phone"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"/>
            <Button
                android:id="@+id/btnDone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:width="200dp"
                android:background="@drawable/done_button"
                android:fontFamily="sans-serif-black"
                android:text="Готово" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
